# metacoder

./: CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: comparison.md  configuration.md  getting-started.md  index.md
docs/evaluations/: configuration.md
src/metacoder/: configuration.py  metacoder.py  registry.py
src/metacoder/coders/: base_coder.py  claude.py  codex.py  config.py  dummy.py  gemini.py  goose.py  minicline.py  opencode.py  qwen.py
src/metacoder/evals/: eval_model.py  runner.py
src/metacoder/mcps/: __init__.py  demo_lookup.py
tests/: test_claude_tool_use.py  test_dummy_coder_tool_capture.py  test_dummy_tool_use.py  test_goose_tool_use.py  test_instructions_option.py  test_introspect_mcp.py  test_metacoder.py  test_registry_loading.py
tests/test_cli/: test_cli.py  test_cli_integration.py  test_mcp_cli.py
tests/test_coders/: test_coder_availability.py  test_coders_basic.py
tests/test_evals/: test_deep_eval.py  test_runner.py
tests/test_mcps/: test_claude_mcp.py  test_gemini_mcp.py  test_mcp_error_handling.py  test_mcp_integration.py
